--- a/README
+++ b/README
@@ -1,6 +1,15 @@
-download or clone the files 
+download and unpack zip file https://github.com/wodor/SugarCRM-polish-translation/zipball/master
+or 
+git clone https://github.com/wodor/SugarCRM-polish-translation.git SugarCRM-polish-translation
 then 
 cd SugarCRM-polish-translation/ &&  zip -r ../Sugar_pl_PL.zip * && cd ..
 
 
+sciagnij zipa  https://github.com/wodor/SugarCRM-polish-translation/zipball/master
+albo
+git clone https://github.com/wodor/SugarCRM-polish-translation.git SugarCRM-polish-translation
 
+nastepnie 
+cd SugarCRM-polish-translation/ &&  zip -r ../Sugar_pl_PL.zip * && cd ..
+
+albo utworz plik swoim ulubionym programem w taki sposob,że plik manifest.php jest w głownym katalogu paczki 
